Update env.md